# BookStore/BookStore.Wasm/Api/swagger.json
@@ -10,12 +10,10 @@
         "tags": [
           "Analytics"
         ],
-        "summary": "Получение последних 5 книг заданного автора",
         "parameters": [
           {
             "name": "id",
             "in": "query",
-            "description": "Идентификатор автора",
             "schema": {
               "type": "integer",
               "format": "int32"
@@ -66,7 +64,6 @@
         "tags": [
           "Analytics"
         ],
-        "summary": "Получение топ 5 авторов по числу изданных страниц",
         "responses": {
           "200": {
             "description": "OK",
@@ -106,17 +103,15 @@
         }
       }
     },
-    "/api/Author/{id}/BookAuthors": {
+    "/api/Author/{authorId}/Books": {
       "get": {
         "tags": [
           "Author"
         ],
-        "summary": "Получение коллекции связанных сущностей по идентифкатору",
         "parameters": [
           {
-            "name": "id",
+            "name": "authorId",
             "in": "path",
-            "description": "Идентификатор",
             "required": true,
             "schema": {
               "type": "integer",
@@ -168,9 +163,7 @@
         "tags": [
           "Author"
         ],
-        "summary": "Добавление новой записи",
         "requestBody": {
-          "description": "Новые данные",
           "content": {
             "application/json": {
               "schema": {
@@ -219,7 +212,6 @@
         "tags": [
           "Author"
         ],
-        "summary": "Получение списка всех данных",
         "responses": {
           "200": {
             "description": "OK",
@@ -261,12 +253,10 @@
         "tags": [
           "Author"
         ],
-        "summary": "Изменение имеющихся данных",
         "parameters": [
           {
             "name": "id",
             "in": "path",
-            "description": "Идентификатор",
             "required": true,
             "schema": {
               "type": "integer",
@@ -275,7 +265,6 @@
           }
         ],
         "requestBody": {
-          "description": "Измененные данные",
           "content": {
             "application/json": {
               "schema": {
@@ -324,12 +313,10 @@
         "tags": [
           "Author"
         ],
-        "summary": "Удаление данных",
         "parameters": [
           {
             "name": "id",
             "in": "path",
-            "description": "Идентификатор",
             "required": true,
             "schema": {
               "type": "integer",
@@ -353,12 +340,10 @@
         "tags": [
           "Author"
         ],
-        "summary": "Получение данных по идентификатору",
         "parameters": [
           {
             "name": "id",
             "in": "path",
-            "description": "Идентификатор",
             "required": true,
             "schema": {
               "type": "integer",
@@ -396,17 +381,15 @@
         }
       }
     },
-    "/api/Book/{id}/BookAuthors": {
+    "/api/Book/{bookId}/Authors": {
       "get": {
         "tags": [
           "Book"
         ],
-        "summary": "Получение коллекции связанных сущностей по идентифкатору",
         "parameters": [
           {
-            "name": "id",
+            "name": "bookId",
             "in": "path",
-            "description": "Идентификатор",
             "required": true,
             "schema": {
               "type": "integer",
@@ -458,9 +441,7 @@
         "tags": [
           "Book"
         ],
-        "summary": "Добавление новой записи",
         "requestBody": {
-          "description": "Новые данные",
           "content": {
             "application/json": {
               "schema": {
@@ -509,7 +490,6 @@
         "tags": [
           "Book"
         ],
-        "summary": "Получение списка всех данных",
         "responses": {
           "200": {
             "description": "OK",
@@ -551,12 +531,10 @@
         "tags": [
           "Book"
         ],
-        "summary": "Изменение имеющихся данных",
         "parameters": [
           {
             "name": "id",
             "in": "path",
-            "description": "Идентификатор",
             "required": true,
             "schema": {
               "type": "integer",
@@ -565,7 +543,6 @@
           }
         ],
         "requestBody": {
-          "description": "Измененные данные",
           "content": {
             "application/json": {
               "schema": {
@@ -614,12 +591,10 @@
         "tags": [
           "Book"
         ],
-        "summary": "Удаление данных",
         "parameters": [
           {
             "name": "id",
             "in": "path",
-            "description": "Идентификатор",
             "required": true,
             "schema": {
               "type": "integer",
@@ -643,12 +618,10 @@
         "tags": [
           "Book"
         ],
-        "summary": "Получение данных по идентификатору",
         "parameters": [
           {
             "name": "id",
             "in": "path",
-            "description": "Идентификатор",
             "required": true,
             "schema": {
               "type": "integer",
@@ -691,9 +664,7 @@
         "tags": [
           "BookAuthor"
         ],
-        "summary": "Добавление новой записи",
         "requestBody": {
-          "description": "Новые данные",
           "content": {
             "application/json": {
               "schema": {
@@ -742,7 +713,6 @@
         "tags": [
           "BookAuthor"
         ],
-        "summary": "Получение списка всех данных",
         "responses": {
           "200": {
             "description": "OK",
@@ -784,12 +754,10 @@
         "tags": [
           "BookAuthor"
         ],
-        "summary": "Изменение имеющихся данных",
         "parameters": [
           {
             "name": "id",
             "in": "path",
-            "description": "Идентификатор",
             "required": true,
             "schema": {
               "type": "integer",
@@ -798,7 +766,6 @@
           }
         ],
         "requestBody": {
-          "description": "Измененные данные",
           "content": {
             "application/json": {
               "schema": {
@@ -847,12 +814,10 @@
         "tags": [
           "BookAuthor"
         ],
-        "summary": "Удаление данных",
         "parameters": [
           {
             "name": "id",
             "in": "path",
-            "description": "Идентификатор",
             "required": true,
             "schema": {
               "type": "integer",
@@ -876,12 +841,10 @@
         "tags": [
           "BookAuthor"
         ],
-        "summary": "Получение данных по идентификатору",
         "parameters": [
           {
             "name": "id",
             "in": "path",
-            "description": "Идентификатор",
             "required": true,
             "schema": {
               "type": "integer",
@@ -927,181 +890,148 @@
         "properties": {
           "lastName": {
             "type": "string",
-            "description": "Имя автора",
             "nullable": true
           },
           "firstName": {
             "type": "string",
-            "description": "Фамилия автора",
             "nullable": true
           },
           "patronymic": {
             "type": "string",
-            "description": "Отчество автора",
             "nullable": true
           },
           "biography": {
             "type": "string",
-            "description": "Биография автора",
             "nullable": true
           }
         },
-        "additionalProperties": false,
-        "description": "DTO для POST/PUT запросов к авторам"
+        "additionalProperties": false
       },
       "AuthorDto": {
         "type": "object",
         "properties": {
           "id": {
             "type": "integer",
-            "description": "Идентификатор автора",
             "format": "int32"
           },
           "lastName": {
             "type": "string",
-            "description": "Имя автора",
             "nullable": true
           },
           "firstName": {
             "type": "string",
-            "description": "Фамилия автора",
             "nullable": true
           },
           "patronymic": {
             "type": "string",
-            "description": "Отчество автора",
             "nullable": true
           },
           "biography": {
             "type": "string",
-            "description": "Биография автора",
             "nullable": true
           }
         },
-        "additionalProperties": false,
-        "description": "DTO для GET запросов к авторам"
+        "additionalProperties": false
       },
       "BookAuthorCreateUpdateDto": {
         "type": "object",
         "properties": {
           "authorId": {
             "type": "integer",
-            "description": "Идентификатор автора",
             "format": "int32"
           },
           "bookId": {
             "type": "integer",
-            "description": "Идентификатор издания",
             "format": "int32"
           }
         },
-        "additionalProperties": false,
-        "description": "DTO для POST/PUT запросов к связям авторов и книг"
+        "additionalProperties": false
       },
       "BookAuthorDto": {
         "type": "object",
         "properties": {
           "id": {
             "type": "integer",
-            "description": "Идентификатор связи",
             "format": "int32"
           },
           "authorId": {
             "type": "integer",
-            "description": "Идентификатор автора",
             "format": "int32"
           },
           "bookId": {
             "type": "integer",
-            "description": "Идентификатор издания",
             "format": "int32"
           }
         },
-        "additionalProperties": false,
-        "description": "DTO для GET запросов к связям авторов и книг"
+        "additionalProperties": false
       },
       "BookCreateUpdateDto": {
         "type": "object",
         "properties": {
           "title": {
             "type": "string",
-            "description": "Название издания",
             "nullable": true
           },
           "annotation": {
             "type": "string",
-            "description": "Аннотация",
             "nullable": true
           },
           "pageCount": {
             "type": "integer",
-            "description": "Число страниц",
             "format": "int32",
             "nullable": true
           },
           "year": {
             "type": "integer",
-            "description": "Год издания",
             "format": "int32",
             "nullable": true
           },
           "publisher": {
             "type": "string",
-            "description": "Издательство",
             "nullable": true
           },
           "isbn": {
             "type": "string",
-            "description": "ISBN",
             "nullable": true
           }
         },
-        "additionalProperties": false,
-        "description": "DTO для POST/PUT запросов к книгам"
+        "additionalProperties": false
       },
       "BookDto": {
         "type": "object",
         "properties": {
           "id": {
             "type": "integer",
-            "description": "Идентификатор издания",
             "format": "int32"
           },
           "title": {
             "type": "string",
-            "description": "Название издания",
             "nullable": true
           },
           "annotation": {
             "type": "string",
-            "description": "Аннотация",
             "nullable": true
           },
           "pageCount": {
             "type": "integer",
-            "description": "Число страниц",
             "format": "int32",
             "nullable": true
           },
           "year": {
             "type": "integer",
-            "description": "Год издания",
             "format": "int32",
             "nullable": true
           },
           "publisher": {
             "type": "string",
-            "description": "Издательство",
             "nullable": true
           },
           "isbn": {
             "type": "string",
-            "description": "ISBN",
             "nullable": true
           }
         },
-        "additionalProperties": false,
-        "description": "DTO для GET запросов к книгам"
+        "additionalProperties": false
       },
       "StringInt32NullableKeyValuePair": {
         "type": "object",
